# elissabeth

./: .gitignore  LICENSE  README.md  pyproject.toml
projects/: README.md  analysis.ipynb  chen.ipynb  expectation_iss.ipynb  wandb_extract.ipynb
projects/code/: code_u.pt  code_x.pt  config.json  config_transformer.json  data.py  main.py
projects/copying/: config.json  data.py  main.py  test.ipynb  watcher.ipynb
projects/cyclic/: config.json  data.py  main.py  watcher.ipynb
projects/elissabeth_properties/: norm.py  temporal.py
projects/evencount/: config.json  main.py
projects/gridworld/: main.py
projects/imitate_mha/: main.py
projects/long_lookup/: config.json  data.py  explicit.ipynb  explicit_longer.ipynb  main.py  multiple_keys_accuracy.csv  multiple_keys_accuracy_trained.csv  multiple_keys_loss.csv  multiple_keys_loss_trained.csv  one_key_accuracy.csv  one_key_accuracy_trained.csv  one_key_loss.csv  one_key_loss_trained.csv  plots.ipynb  wandb_extract.ipynb  watcher.ipynb
projects/lra/: config.json  data.py  main.py
projects/makemore_replicate/: config.json  data.py  main.py  watcher.ipynb
projects/mnist/: config.json  main.py  watcher.ipynb
projects/modular_arithmetic/: main.py
projects/occurences/: config.json  config_transformer.json  main.py  watcher.ipynb
projects/streaks/: main.py
projects/ucr_uea/: config.json  data.py  main.py  modules.py
sainomore/: __init__.py  base.py  callbacks.py  data.py  hooks.py  lightning.py  positional.py  tools.py
src/: imitate_mha.py  modular_arithmetic.py
tests/: test_positional.py
(+41 files in other folders)
