[tool.poetry]
name = "sainomore"
version = "0.3.0"
description = ""
authors = ["alienkrieg <alienkrieg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.25.2"
torch = "^2.0.0"
lightning = "^2.0.8"
wandb = "^0.15.10"
matplotlib = "^3.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
